--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@testing-library/jest-dom": "^6.8.0",
@@ -48,12 +50,24 @@
     "babel-jest": "^30.1.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "size-limit": "^11.1.4",
+    "@size-limit/preset-small-lib": "^11.1.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
+    "size": "size-limit"
   },
+  "size-limit": [
+    {
+      "path": "src/index.js",
+      "import": "{ BentoGrid, BentoBox }",
+      "limit": "2 kB"
+    }
+  ],
   "jest": {
     "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
