--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install --no-audit --no-fund
 
       - name: Run tests
         run: npm test -- --ci --reporters=default --reporters=jest-junit
@@ -42,7 +42,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
+      - run: npm install --no-audit --no-fund
       - run: npm run typecheck
 
   lint:
@@ -57,7 +57,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
+      - run: npm install --no-audit --no-fund
       - run: npm run lint
 
   size-limit:
@@ -69,7 +69,7 @@ jobs:
         with:
           node-version: 20.x
           cache: "npm"
-      - run: npm ci
+      - run: npm install --no-audit --no-fund
       - run: npm run size
 
   pack-dry-run:
