--- a/package.json
+++ b/package.json
@@ -41,19 +41,21 @@
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
-    "eslint": "^9.12.0",
-    "eslint-plugin-react": "^7.37.1",
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@size-limit/preset-small-lib": "^11.1.4",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
     "babel-jest": "^30.1.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
     "jest": "^30.1.2",
     "jest-environment-jsdom": "^30.1.2",
-    "size-limit": "^11.1.4",
-    "@size-limit/preset-small-lib": "^11.1.4",
+    "jest-junit": "^16.0.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "size-limit": "^11.1.4"
   },
   "scripts": {
     "test": "jest",
