--- a/package.json
+++ b/package.json
@@ -47,18 +47,18 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
-    "babel-jest": "^30.1.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.37.1",
-    "jest": "^30.1.2",
-    "jest-environment-jsdom": "^30.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "size-limit": "^11.1.4"
   },
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js",
+    "test": "jest",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
     "size": "size-limit"
