--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
+    "@eslint/js": "^9.12.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.12.0",
+    "globals": "^15.9.0",
     "eslint-plugin-react": "^7.37.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -67,7 +69,12 @@
     {
       "path": "src/index.js",
       "import": "{ BentoGrid, BentoBox }",
-      "limit": "2 kB"
+      "limit": "2 kB",
+      "esbuild": {
+        "loader": {
+          ".js": "jsx"
+        }
+      }
     }
   ],
   "jest": {
