build(ci): add jest + RTL tests, lint/typecheck, size-limit, npm pack dry-run

--- a/package.json
+++ b/package.json
@@ -69,12 +69,7 @@
     {
       "path": "src/index.js",
       "import": "{ BentoGrid, BentoBox }",
-      "limit": "2 kB",
-      "esbuild": {
-        "loader": {
-          ".js": "jsx"
-        }
-      }
+      "limit": "2 kB"
     }
   ],
   "jest": {
