--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "globals": "^15.9.0",
     "eslint-plugin-react": "^7.37.1",
     "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "react": "^19.1.1",
