--- a/package.json
+++ b/package.json
@@ -43,15 +43,16 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@eslint/js": "^9.12.0",
     "@size-limit/preset-small-lib": "^11.1.4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.0",
-    "@eslint/js": "^9.12.0",
+    "@testing-library/react": "^16.3.0",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
-    "globals": "^15.9.0",
     "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -61,7 +62,7 @@
     "size-limit": "^11.1.4"
   },
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
     "size": "size-limit"
