--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "typescript": "^5.6.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "size-limit": "^11.1.4"
@@ -63,7 +64,7 @@
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "test:ci": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --ci --reporters=default --reporters=jest-junit",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "typecheck": "npx tsc -p tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
     "size": "size-limit"
   },
