--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@eslint/js": "^9.12.0",
     "@size-limit/preset-small-lib": "^11.1.4",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -56,10 +56,10 @@
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "typescript": "^5.6.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "size-limit": "^11.1.4"
+    "size-limit": "^11.1.4",
+    "typescript": "^5.6.3"
   },
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
