--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.27.1",
+    "jest-circus": "^30.1.3",
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
