--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.27.1",
-    "jest-circus": "^30.1.3",
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
@@ -55,8 +54,8 @@
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.9.0",
     "jest": "^30.1.3",
+    "jest-circus": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-junit": "^16.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "size-limit": "^11.1.4",
@@ -64,7 +63,7 @@
   },
   "scripts": {
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
-    "test:ci": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --ci --reporters=default --reporters=jest-junit",
+    "test:ci": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --ci --reporters=default",
     "typecheck": "npx tsc -p tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.js\" \"test/**/*.js\"",
     "size": "size-limit"
