--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.9.0",
     "jsdom": "^27.0.0",
+    "tough-cookie": "^4.1.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "size-limit": "^11.1.4",
